Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-51604

Pixmap cursors not supported on QtWayland

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • 5.6.0 RC
    • QPA: Wayland
    • None
    • QtWayland on 5.6.0 branch with HEAD at baec8be7294a176620253dbbc1b2938cf96c8360
    • 9cbd553eeb758bb060514f17d4615003da16429a

      The QtWayland QPA plugin seems to not support pximap/bitmap cursors.

      E.g. use something like pseudocode:
      QWindow *w; // some QWindow
      QImage c(QSize(24, 24), QImage::Format_ARG32);
      c.fill(Qt::red);
      w->setCursor(QCursor(QPixmap::fromImage(c)));

      This will not result in a cursor, but in a debug message:
      "Could not find cursor for shape 24"

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mgraesslin Martin Gräßlin
            mgraesslin Martin Gräßlin
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes