src/client/qwaylandcursor_p.h
@@ -57,6 +57,7 @@ QT_BEGIN_NAMESPACE
 
 namespace QtWaylandClient {
 
+class QWaylandBuffer;
 class QWaylandDisplay;
 class QWaylandScreen;
 
@@ -72,6 +73,7 @@ public:
     void setPos(const QPoint &pos);
 
     struct wl_cursor_image *cursorImage(Qt::CursorShape shape);
+    QSharedPointer<QWaylandBuffer> cursorBitmapImage(const QCursor *cursor);
 
 private:
     enum WaylandCursor {
