src/client/qwaylanddisplay_p.h
@@ -118,6 +118,7 @@ public:
     QWaylandWindowManagerIntegration *windowManagerIntegration() const;
 
     void setCursor(struct wl_buffer *buffer, struct wl_cursor_image *image);
+    void setCursor(const QSharedPointer<QWaylandBuffer> &buffer, const QPoint &hotSpot);
 
     struct wl_display *wl_display() const { return mDisplay; }
     struct ::wl_registry *wl_registry() { return object(); }
